soroban-sdk/tests/macros_fails/contractimport_with_sha256_verify_fail.rs
#![cfg(feature = "testutils")]

soroban_sdk::contractimport!(
    file = "../../../target/wasm32-unknown-unknown/release/example_add_i32.wasm",
    sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
);

pub fn main() {}
